[project]
name = "comfyui-apisr-kj"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["numpy", "scipy", "omegaconf", "timm>=0.9.7"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-APISR-KJ"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-APISR-KJ"
Icon = ""
